# fex-android-launcher

./: .gitignore  PROGRESS.md  README.md  TODO.md  build.gradle.kts  local.properties.template  settings.gradle.kts  test_re4.sh  test_sekiro.sh  trace_ys9.sh
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: VK_LAYER_HEADLESS_surface.json  fake_xcb.c  fex_thunk_icd.json  launch_wine.sh  setup.sh  setup_fex.sh  setup_headless.sh  setup_proton.sh  test_headless  test_headless.c  test_vortek.sh  test_vortek_render.c  test_vulkan_loader  test_xcb_surface.sh  vkcube  vulkan_dummy_i386.json  vulkan_headless.c  vulkan_headless_layer.c  vulkaninfo  x86-libs.tar.xz
app/src/main/cpp/: CMakeLists.txt  fexserver_diag.c  framebuffer_bridge.cpp  seccomp_test.c  steamlauncher.cpp  vulkan_headless_wrapper.c  x11_socket.cpp
app/src/main/cpp/lorie/: lorie_input.cpp  lorie_renderer.cpp  lorie_server.cpp  lorie_server.h
app/src/main/cpp/vulkan_bridge/: vulkan_bridge.cpp  vulkan_bridge.h
app/src/main/java/com/mediatek/steamlauncher/: ContainerManager.kt  DialogAuthenticator.kt  FexExecutor.kt  FrameSocketServer.kt  FramebufferBridge.kt  GameActivity.kt  InputHandler.kt  LorieView.kt  MainActivity.kt  ProotExecutor.kt  ProtonManager.kt  SettingsActivity.kt  SteamContentDownloader.kt  SteamLauncherApp.kt  SteamService.kt  TerminalActivity.kt  VortekRenderer.kt  VortekSurfaceView.kt  VulkanBridge.kt  X11Server.kt  X11SocketHelper.kt  X11SocketServer.kt
app/src/main/java/com/termux/x11/: CmdEntryPoint.java  LorieView.java  MainActivity.java
app/src/main/java/com/winlator/core/: FileUtils.java
app/src/main/java/com/winlator/xconnector/: ConnectionHandler.java  RequestHandler.java  UnixSocketConfig.java  XConnectorEpoll.java  XInputStream.java  XOutputStream.java  XStreamLock.java
app/src/main/java/com/winlator/xenvironment/components/: VortekRendererComponent.java
app/src/main/jniLibs/arm64-v8a/: README_VORTEK.md
app/src/main/res/drawable/: btn_dpad.xml  btn_overlay.xml  ic_keyboard.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_stop.xml  ic_terminal.xml  spinner_background.xml
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_settings.xml  activity_terminal.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
fex-emu/: Dockerfile.fex  build_fex.sh  build_fex_cross.sh  build_fex_thunks.sh  build_vortek_wrapper.sh  build_vulkan_headless.sh  build_vulkan_loader.sh  d3dcompiler_47_stub.c  fex-android-patches-2601.patch  fex-android-patches.patch  fex_thunk_icd.c  galaxy64_stub.c  galaxy64_stub.def  galaxy64_stub.s  gfsdk_ssao_stub.c  package_fex.sh  rebuild_fex_quick.sh  setup_fex_source.sh  sigill_trap.c  steam_api64_stub.c  steam_api64_stub.def  test_d3d11.c  test_dll_load.c  test_vk_cmdbuf.c  test_vulkan_loader.c  test_wine_vulkan.c  vkcube_wine.c  vortek_icd_wrapper.c  vulkan_dlopen_diag.c  vulkan_dummy_icd_i386.c  vulkan_thunk_prewarm.c  xaudio2_7_stub.c  xaudio2_7_stub.def
fex-emu/steamwebhelper/: dlmopen_version.map  fix_steam32.c  fix_steamwebhelper.c  libempty_shim.c  libpipewire_stub.c  libsigaction_only.c  libtest_signals.c  libtest_sigsys_only.c  libtest_trap_ill_abrt.c  sdl3_stub_full.c  steamwebhelper.sh  test_openat.c  test_openat.sh  test_openat_dynamic.c  trace_steam_ipc.c  trace_steam_local.sh
scripts/: bootstrap_steam.sh  fetch_unsquashfs_source.sh  install_mesa.sh  install_xvfb.sh  install_xvnc.sh  launch_wine.sh  patch_glibc_seccomp.py  patch_vortek_socket_path.py  push_steam.sh  setup_proton.sh  vulkan_headless.c
